--- a/styles.css
+++ b/styles.css
@@ -406,7 +406,7 @@ svg {
 }
 
 .skills__content,
-.skills__gropup {
+.skills__group {
 	display: grid;
 }
 
@@ -473,7 +473,7 @@ svg {
 }
 
 .projects__subtitle,
-.projects__title {
+.projects__button {
 	color: var(--title-color);
 	font-size: var(--small-font-size);
 }
@@ -634,7 +634,212 @@ svg {
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
+@media screen and (max-width: 320px) {
+	.container {
+		margin-inline: 1rem;
+	}
 
+	.skills__content {
+		grid-template-columns: max-content;
+		row-gap: 1rem;
+	}
+}
 /* For medium devices */
+@media screen and (min-width: 576px) {
+	.home__container,
+	.about__container,
+	.skills__container,
+	.projects__container,
+	.contact__container {
+		grid-template-columns: 360px;
+		justify-content: center;
+	}
+}
+
+@media screen and (min-width: 768px) {
+	.nav__menu {
+		width: 55%;
+	}
+
+	.home__container,
+	.about__container,
+	.skills__container {
+		grid-template-columns: repeat(2, 1fr);
+		align-items: center;
+	}
+
+	.home__data,
+	.about__data,
+	.skills__data,
+	:is(.about__data, .skills__data) :is(.section__subtitle, .section__title) {
+		text-align: initial;
+	}
+
+	.home__social {
+		justify-content: initial;
+	}
+
+	.home__blob,
+	.about__blob {
+		width: 400px;
+	}
+
+	.about__data {
+		order: 1;
+	}
+
+	.projects__container {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
 
 /* For large devices */
+@media screen and (min-width: 1023px) {
+	.section {
+		padding-block: 7rem 2rem;
+	}
+
+	.section__subtitle {
+		font-size: var(--normal-font-size);
+	}
+
+	.nav {
+		height: calc(var(--header-height) + 1rem);
+	}
+
+	.nav__close,
+	.nav__toggle {
+		display: none;
+	}
+
+	.nav__list {
+		flex-direction: row;
+		column-gap: 3rem;
+	}
+
+	.nav__menu {
+		width: initial;
+		height: initial;
+		padding: 0;
+	}
+
+	.blur-header::after {
+		backdrop-filter: blur(25px);
+		-webkit-backdrop-filter: blur(25px);
+	}
+}
+
+@media screen and (min-width: 1152px) {
+	.container {
+		margin-inline: auto;
+	}
+
+	.home__container {
+		grid-template-columns: 550px 460px;
+		align-items: center;
+		column-gap: 6rem;
+		padding-block: 2rem 2.5rem;
+	}
+
+	.home__blob {
+		width: 480px;
+	}
+
+	.home__content {
+		row-gap: 4.5rem;
+	}
+
+	.home__description {
+		margin-block: 1.5rem 2rem;
+	}
+
+	.home__social {
+		column-gap: 1.5rem;
+	}
+
+	.about__container {
+		grid-template-columns: 550px 460px;
+		column-gap: 4.5rem;
+		align-items: center;
+		padding-bottom: 1rem;
+	}
+
+	.about__blob {
+		width: 480px;
+	}
+
+	.about__description {
+		margin-bottom: 3rem;
+	}
+
+	.skills__container {
+		grid-template-columns: 340px 425px;
+		column-gap: 10rem;
+		align-items: center;
+		padding-bottom: 4rem;
+	}
+
+	.skills__description {
+		margin-bottom: 3rem;
+	}
+
+	.skills__content {
+		column-gap: 8rem;
+	}
+
+	.skills__group {
+		row-gap: 1.5rem;
+	}
+
+	.skills__item {
+		font-size: var(--h3-font-size);
+	}
+
+	.projects__container {
+		grid-template-columns: repeat(3, 1fr);
+		row-gap: 3rem;
+		padding-block: 2.5rem 4rem;
+	}
+
+	.projects__button {
+		font-size: var(--normal-font-size);
+	}
+
+	.contact__container {
+		grid-template-columns: 680px;
+		padding-block: 2.5rem 2rem;
+	}
+
+	.contact__form {
+		row-gap: 1.5rem;
+	}
+
+	.contact__group {
+		grid-template-columns: repeat(2, 1fr);
+		column-gap: 1.5rem;
+	}
+
+	.contact__input {
+		padding: 1.5rem;
+	}
+
+	.contact__form textarea {
+		margin-bottom: 0;
+		height: 15rem;
+	}
+
+	.footer {
+		padding-block: 4.5rem 4rem;
+	}
+
+	.footer__container {
+		grid-template-columns: repeat(2, 1fr);
+		align-items: center;
+		justify-content: center;
+		column-gap: 3rem;
+	}
+
+	.footer__social {
+		margin-bottom: 0;
+	}
+}
